<resources>
    <string name="app_name">testeSantander</string>

    <string name="login_label">Bank</string>
    <string name="login_user_hint">User</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Login</string>

    <string name="home_account_label">Conta</string>
    <string name="home_balance_label">Saldo</string>
    <string name="home_recent_label">Recentes</string>

    <string name="payment_label">Pagamento</string>
</resources>
