<?xml version="1.0" encoding="utf-8"?>

<layout  xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="userAccountData" type="br.com.renannunessil.testesantander.data.model.UserAccountData"/>
    </data>

    <android.support.constraint.ConstraintLayout
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                    android:id="@+id/cv_home_account_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                             android:layout_height="wrap_content">
                    <TextView
                            android:id="@+id/tv_home_name"
                            style="@style/Home.AccountTextView"
                            tools:text="Jose da Silva Teste"
                            android:text="@{userAccountData.name}"
                            android:layout_marginTop="20dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                            android:id="@+id/tv_home_account_label"
                            style="@style/Home.AccountTextView.Label"
                            android:text="@string/home_account_label"
                            android:layout_marginTop="28dp"
                            app:layout_constraintTop_toBottomOf="@id/tv_home_name"
                            app:layout_constraintStart_toStartOf="parent"
                            />

                    <TextView
                            android:id="@+id/tv_home_account"
                            style="@style/Home.AccountTextView"
                            tools:text="2050 / 01.111222-4"
                            android:text="@{userAccountData.formattedAgencyAndAccount}"
                            android:layout_marginTop="6dp"
                            app:layout_constraintTop_toBottomOf="@id/tv_home_account_label"
                            app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                            android:id="@+id/tv_home_balance_label"
                            style="@style/Home.AccountTextView.Label"
                            android:text="@string/home_balance_label"
                            android:layout_marginTop="28dp"
                            app:layout_constraintTop_toBottomOf="@id/tv_home_account"
                            app:layout_constraintStart_toStartOf="parent"
                    />

                    <TextView
                            android:id="@+id/tv_home_balance"
                            style="@style/Home.AccountTextView"
                            tools:text="R$1.000,00"
                            android:layout_marginTop="6dp"
                            android:layout_marginBottom="17dp"
                            app:layout_constraintTop_toBottomOf="@id/tv_home_balance_label"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    <ImageView
                            android:id="@+id/iv_home_logout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/logout"
                            android:layout_marginEnd="13dp"
                            app:layout_constraintTop_toTopOf="@id/tv_home_name"
                            app:layout_constraintBottom_toBottomOf="@id/tv_home_name"
                            app:layout_constraintEnd_toEndOf="parent"/>
                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <TextView
                    android:id="@+id/tv_home_recent_label"
                    style="@style/Home.TextView"
                    android:text="@string/home_recent_label"
                    android:layout_marginTop="14dp"
                    app:layout_constraintTop_toBottomOf="@id/cv_home_account_info"
                    app:layout_constraintStart_toStartOf="parent"/>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_home_recent_launches"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    tools:listitem="@layout/item_recent_launches_list"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_home_recent_label"
            app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.design.widget.CoordinatorLayout
                android:id="@+id/cl_progressbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/progressBarBackground"
                android:visibility="gone"
                tools:visibility="visible"
        >

            <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

        </android.support.design.widget.CoordinatorLayout>

    </android.support.constraint.ConstraintLayout>
</layout>